Adjusted paddings, width and height to wrap content/match parent to allow better alignment with variable size devices.
-Adjusted paddings

-Adding bottomNav and fragments for multiple activities/views
-Added fragments
- Completed main menu fragments for task views
- Added nested recycler
- Added dialog for new schedule
- Added profile page
- Added date and distributor

--- a/app/src/main/res/layout/bottom_drawer.xml
+++ b/app/src/main/res/layout/bottom_drawer.xml
@@ -61,6 +61,7 @@
         android:layout_marginBottom="20dp"
         />
     <Button
+        android:id="@+id/buttonSave"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:background="@drawable/button_custom_color"
