--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frameLayout"
+    android:background="@color/off_white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="15dp"
@@ -10,45 +11,40 @@
 
     <!-- TODO: Update blank fragment layout -->
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
+
+    <LinearLayout
+        android:id="@+id/linear_home"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@drawable/top_drawer_background"
+        android:paddingStart="30dp"
+        android:paddingBottom="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:elevation="0dp"
-        app:cardCornerRadius="10dp">
-        
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:paddingBottom="20dp"
-            android:paddingStart="30dp">
-            <TextView
-                android:layout_marginTop="30dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Weekly Visit Plan"
-                android:fontFamily="@font/poppins_semi_bold"
-                android:includeFontPadding="false"
-                android:textSize="24sp"
-                android:textColor="@color/black"
-                />
-            <TextView
-                android:layout_marginTop="3dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Weekly Visit Plan"
-                android:fontFamily="@font/poppins_regular"
-                android:includeFontPadding="false"
-                android:textSize="16sp"
-                android:textColor="#802B2B40"
-                />
-        </LinearLayout>
+        app:layout_constraintTop_toTopOf="parent">
 
-    </androidx.cardview.widget.CardView>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:fontFamily="@font/poppins_semi_bold"
+            android:includeFontPadding="false"
+            android:text="Weekly Visit Plan"
+            android:textColor="@color/black"
+            android:textSize="24sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="3dp"
+            android:fontFamily="@font/poppins_regular"
+            android:includeFontPadding="false"
+            android:text="Weekly Visit Plan"
+            android:textColor="#802B2B40"
+            android:textSize="16sp" />
+    </LinearLayout>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_marginHorizontal="30dp"
@@ -59,7 +55,7 @@
         app:layout_constraintBottom_toTopOf="@+id/buttonSetNewSchedule"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView" />
+        app:layout_constraintTop_toBottomOf="@+id/linear_home" />
 
     <Button
         android:layout_marginHorizontal="30dp"
