Adjusted paddings, width and height to wrap content/match parent to allow better alignment with variable size devices.
-Adjusted paddings

-Adding bottomNav and fragments for multiple activities/views
-Added fragments
- Completed main menu fragments for task views
- Added nested recycler
- Added dialog for new schedule
- Added profile page with circular profile img
- Added date and distributor

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -18,12 +18,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-        <ImageView
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:padding="8dp"
+            android:foreground="@drawable/profile_icon_background"
             android:id="@+id/imageViewProfile"
             android:layout_width="130dp"
             android:layout_height="130dp"
             android:layout_gravity="center"
-            android:src="@drawable/ic_baseline_home_24" />
+            android:src="@drawable/profile_img_placeholder"
+            android:scaleType="centerCrop"
+            app:shapeAppearanceOverlay="@style/Circular"/>
         <TextView
             android:id="@+id/textNameUser"
             android:layout_width="wrap_content"
