Adjusted paddings, width and height to wrap content/match parent to allow better alignment with variable size devices.
-Adjusted paddings

-Adding bottomNav and fragments for multiple activities/views
-Added fragments
- Completed main menu fragments for task views
- Added nested recycler
- Added dialog for new schedule
- Added profile page with circular profile img
- Added date and distributor
- Reconstructed recyclerView
- Set on clicked to go to fill up inspection

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,5 +17,6 @@
     <color name="weekly_dark">#F58220</color>
     <color name="daily_light">#1A00BA00</color>
     <color name="daily_dark">#00BA00</color>
+    <color name="greyed_out">#802B2B40</color>
 
 </resources>
