--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -4,7 +4,6 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-
     >
 
     <androidx.cardview.widget.CardView
@@ -17,6 +16,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <TextView
+                android:id="@+id/dialog_title_custom"
                 android:layout_gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -25,8 +25,10 @@
                 android:textColor="@color/black"
                 android:fontFamily="@font/poppins_semi_bold"
                 android:includeFontPadding="false"
+                android:layout_marginBottom="10dp"
                 />
             <TextView
+                android:id="@+id/dialog_content_custom"
                 android:layout_gravity="center"
                 android:textAlignment="center"
                 android:layout_width="wrap_content"
@@ -35,6 +37,7 @@
                 android:layout_marginBottom="10dp"
                 />
             <LinearLayout
+                android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
