-Added parse to calendar selection
TODO(
-Correction for Set New Schedule on Distributor selection (Use another custom dialog)
-Calendar fragment (Insert adapter)
-History fragment
)

--- a/app/src/main/res/drawable/calendar_selection_bck.xml
+++ b/app/src/main/res/drawable/calendar_selection_bck.xml
@@ -17,6 +17,6 @@
         android:gravity="center|end"
         android:width="30dp"
         android:height="30dp">
-        <bitmap android:src="@android:drawable/ic_menu_today"/>
+        <bitmap android:src="@drawable/icon_calendar"/>
     </item>
 </layer-list>
