--- a/app/src/main/res/layout/bottom_drawer.xml
+++ b/app/src/main/res/layout/bottom_drawer.xml
@@ -29,12 +29,20 @@
         android:textSize="14sp"
         android:includeFontPadding="false"
         />
-    <Spinner
+    <Button
         android:id="@+id/spinner_drawer"
         android:layout_width="match_parent"
         android:layout_height="60dp"
+        android:text="@string/distributorSelection"
+        android:textColor="@color/black"
+        android:textAlignment="textStart"
+        android:textAllCaps="false"
+        android:includeFontPadding="false"
+        android:fontFamily="@font/poppins_regular"
+        android:textSize="16sp"
         android:backgroundTint="@null"
         android:paddingHorizontal="15dp"
+        app:backgroundTint="@null"
         android:background="@drawable/spinner_clear_bg"
         />
     <TextView
@@ -53,6 +61,10 @@
         android:background="@drawable/calendar_selection_bck"
         android:paddingHorizontal="20dp"
         android:hint="Select Date"
+        android:fontFamily="@font/poppins_regular"
+        android:includeFontPadding="false"
+        android:textColor="@color/black"
+        android:textSize="16sp"
         android:inputType="date"
         android:clickable="false"
         android:cursorVisible="false"
