- Completed fill up inspection activity
TODO(
- Calendar Page
- History Page
)

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -161,6 +161,7 @@
                 android:src="@drawable/line_2" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraint_language"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingHorizontal="10dp">
@@ -175,7 +176,6 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/language_text_profile"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
