--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_marginHorizontal="30dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     >
@@ -48,8 +50,6 @@
                     android:layout_height="60dp"
                     android:layout_weight="1"
                     android:layout_marginEnd="20dp"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
                     android:textColor="@color/black"
                     android:background="@drawable/button_custom_clear"
                     android:fontFamily="@font/poppins_semi_bold"
@@ -62,8 +62,6 @@
                     android:id="@+id/buttonDialogYes"
                     android:layout_width="0dp"
                     android:layout_height="60dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentTop="true"
                     android:background="@drawable/button_custom_color"
                     android:fontFamily="@font/poppins_semi_bold"
                     android:includeFontPadding="false"
