--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-
+    tools:ignore="HardcodedText"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_vector"
@@ -73,7 +73,10 @@
                 android:autofillHints="name"
                 android:background="@drawable/button_custom_clear"
                 android:hint="Username"
+                android:fontFamily="@font/poppins_regular"
                 android:includeFontPadding="false"
+                android:textSize="16sp"
+                android:textColor="@color/black"
                 android:inputType="textPersonName"
                 android:paddingHorizontal="15dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -102,7 +105,7 @@
                     android:hint="Enter Password Here"
                     android:inputType="textPassword"
                     app:backgroundTint="@null" />
-            </com.google.android.material.textfield.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>
 
             <CheckBox
                 android:id="@+id/checkRemember"
