- Completed fill up inspection activity - Completed all activity and fragments with placeholders
- Fixed dark mode causing cardview changing color

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,11 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+
+        <item name="android:textColorHint">@color/greyed_out</item>
+        <item name="android:fontFamily">@font/poppins_regular</item>
+
+
     </style>
     <style name="DialogAnimation">
         <item name="android:windowEnterAnimation">@anim/slide_in_bottom</item>
