--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,9 +13,16 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
 
+        <item name="android:textColorHint">@color/greyed_out</item>
+        <item name="android:fontFamily">@font/poppins_regular</item>
+
+
+    </style>
+    <style name="DialogAnimation">
         <item name="android:windowEnterAnimation">@anim/slide_in_bottom</item>
         <item name="android:windowExitAnimation">@anim/slide_out_bottom</item>
-
+    </style>
+    <style name="Circular">
         <item name="cornerSize">50%</item>
     </style>
 </resources>
