--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -24,7 +24,7 @@
 
     <TextView
         android:layout_marginHorizontal="30dp"
-        android:id="@+id/textView7"
+        android:id="@+id/textCurrentMonth"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/poppins_regular"
