--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -10,12 +10,15 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">@color/white</item>
+        <item name="android:statusBarColor">@color/black</item>
         <!-- Customize your theme here. -->
 
+        <!-- Fonts -->
+        <item name="android:includeFontPadding">false</item>
         <item name="android:textColorHint">@color/greyed_out</item>
         <item name="android:fontFamily">@font/poppins_regular</item>
-
+        
+        <item name="background">@color/off_white</item>
 
     </style>
     <style name="DialogAnimation">
