--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,17 +10,21 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">@color/white</item>
+        <item name="android:statusBarColor">@color/black</item>
         <!-- Customize your theme here. -->
 
+        <!-- Fonts -->
+        <item name="android:includeFontPadding">false</item>
         <item name="android:textColorHint">@color/greyed_out</item>
         <item name="android:fontFamily">@font/poppins_regular</item>
 
     </style>
+    <!-- Dialog animation for bottom -->
     <style name="DialogAnimation">
         <item name="android:windowEnterAnimation">@anim/slide_in_bottom</item>
         <item name="android:windowExitAnimation">@anim/slide_out_bottom</item>
     </style>
+    <!-- Circular profile -->
     <style name="Circular">
         <item name="cornerSize">50%</item>
     </style>
