--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -60,6 +60,7 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:paddingTop="20dp"
         android:id="@+id/recycler_history"
         android:layout_width="match_parent"
         android:layout_height="0dp"
