--- a/app/src/main/res/layout/bottom_drawer.xml
+++ b/app/src/main/res/layout/bottom_drawer.xml
@@ -80,6 +80,7 @@
         app:backgroundTint="@null"
         android:text="Save"
         android:textAllCaps="false"
+        android:textColor="@color/white"
         android:textSize="16sp"
         android:fontFamily="@font/poppins_semi_bold"
         android:includeFontPadding="false"
