TODO ( - FIX bottomsheet to use cornered edges - Fix update calendar view to new calendar library
+ Refer reference coding later on
)

--- a/app/src/main/res/layout/bottom_drawer.xml
+++ b/app/src/main/res/layout/bottom_drawer.xml
@@ -4,8 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/bottom_drawer_background"
-    android:backgroundTint="@null"
+    android:background="@color/white"
     android:paddingHorizontal="40dp"
     android:paddingVertical="20dp"
     android:orientation="vertical">
