--- a/app/src/main/res/layout/bottom_drawer.xml
+++ b/app/src/main/res/layout/bottom_drawer.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:id="@+id/bottom_drawer_sheet"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
+    android:background="@color/transparent"
     android:paddingHorizontal="40dp"
     android:paddingVertical="20dp"
     android:orientation="vertical">
